# klib

./: CMakeLists.txt  README.md  kopen.c
cmake/: klibConfig.cmake.in
test/: CMakeLists.txt  khash_keith.c  khash_keith2.c  kseq_test_data.txt
